--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "@react-email/render": "^1.0.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "cuid": "^3.0.0",
     "dotenv": "^16.4.7",
@@ -31,6 +32,7 @@
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
     "nodemailer": "^6.9.16",
     "react-dom": "^19.0.0",
