--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -46,6 +46,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.15.0",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.469.0",
     "motion": "^11.16.3",
     "next-themes": "^0.4.4",
