--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -59,6 +59,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-star-ratings": "^2.3.0",
+    "react-video-js-player": "^1.1.1",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.1",
     "sooner": "^1.1.4",
