--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -61,6 +61,7 @@
     "react-star-ratings": "^2.3.0",
     "react-video-js-player": "^1.1.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.1",
     "sooner": "^1.1.4",
     "tailwind-merge": "^2.6.0",
