--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,7 +29,7 @@
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
@@ -45,6 +45,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.15.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.469.0",
@@ -57,6 +58,7 @@
     "react-icon-cloud": "^4.1.5",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^7.1.1",
     "react-star-ratings": "^2.3.0",
     "react-video-js-player": "^1.1.1",
