--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -40,6 +40,7 @@
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -57,6 +58,7 @@
     "react-hook-form": "^7.54.2",
     "react-icon-cloud": "^4.1.5",
     "react-icons": "^5.4.0",
+    "react-loading-indicators": "^1.0.0",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^7.1.1",
