--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,18 +29,24 @@
     "drizzle-orm": "^0.38.0",
     "emailjs-com": "^3.2.0",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "get-video-duration": "^4.1.0",
     "googleapis": "^144.0.0",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
     "nodemailer": "^6.9.16",
+    "path": "^0.12.7",
+    "pdfkit": "^0.16.0",
+    "promises": "^0.2.5",
     "react-dom": "^19.0.0",
     "resend": "^4.0.1",
     "sequelize": "^6.37.5",
     "sib-api-v3-sdk": "^8.5.0",
     "socket.io": "^4.8.1",
+    "stream": "^0.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
