--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -48,6 +48,8 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.15.0",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.469.0",
     "motion": "^11.18.2",
@@ -56,6 +58,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.4.1",
     "react-icon-cloud": "^4.1.5",
     "react-icons": "^5.4.0",
     "react-loading-indicators": "^1.0.0",
