--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -58,6 +58,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-i18n": "^1.0.1",
     "react-i18next": "^15.4.1",
     "react-icon-cloud": "^4.1.5",
     "react-icons": "^5.4.0",
