--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -58,7 +58,6 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-i18n": "^1.0.1",
     "react-i18next": "^15.4.1",
     "react-icon-cloud": "^4.1.5",
     "react-icons": "^5.4.0",
@@ -89,7 +88,8 @@
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-compression": "^0.5.1"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
