--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^5.74.4",
     "@tanstack/react-table": "^8.20.6",
     "@tiptap/pm": "^2.11.2",
     "@tiptap/react": "^2.11.2",
